--- a/templates/index.html
+++ b/templates/index.html
@@ -199,8 +199,8 @@
                                     <td class="ps-4">{{ loop.index }}</td>
                                     <td class="barcode">{{ product.barcode }}</td>
                                     <td>
-                                        <img src="{{ product.image }}"
-                                            alt="{{ product.name }}" class="img-thumbnail" width="50" height="50">
+                                        <img src="{{ product.image }}" alt="{{ product.name }}" class="img-thumbnail"
+                                            width="50" height="50">
                                     </td>
                                     <td>{{ product.name }}</td>
                                     <td class="text-center">
