--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
         <a href="/" class="active">
             <i class="fas fa-home"></i> Dashboard
         </a>
-        <a href="/add_product">
+        <a href="/tambah_produk">
             <i class="fas fa-plus"></i> Tambah Produk
         </a>
         <a href="/produk_keluar">
