--- a/templates/produk_keluar.html
+++ b/templates/produk_keluar.html
@@ -115,7 +115,7 @@
         <a href="/">
             <i class="fas fa-home"></i> Dashboard
         </a>
-        <a href="/add_product">
+        <a href="/tambah_produk">
             <i class="fas fa-plus"></i> Tambah Produk
         </a>
         <a href="/produk_keluar" class="active">
