--- a/templates/tambah-produk.html
+++ b/templates/tambah-produk.html
@@ -126,7 +126,7 @@
         <a href="/">
             <i class="fas fa-home"></i> Dashboard
         </a>
-        <a href="/add_product" class="active">
+        <a href="/tambah_produk" class="active">
             <i class="fas fa-plus"></i> Tambah Produk
         </a>
         <a href="/produk_keluar">
@@ -145,12 +145,6 @@
         </nav>
 
         <div class="container">
-            <div class="mb-4">
-                <a href="/" class="text-secondary text-decoration-none">
-                    <i class="fas fa-arrow-left"></i> Kembali ke Daftar Produk
-                </a>
-            </div>
-
             <div class="card">
                 <div class="card-body p-4">
                     <h1 class="page-header mb-4">Tambah Produk Baru</h1>
