--- a/templates/produk_keluar.html
+++ b/templates/produk_keluar.html
@@ -253,6 +253,8 @@
         <a href="/produk_keluar" class="active">
             <i class="fas fa-truck"></i> Produk Keluar
         </a>
+        <h1>Selamat datang, {{ username }}!</h1>
+        <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
     </div>
 
     <div class="main-content">
